--- a/index.html
+++ b/index.html
@@ -45,11 +45,21 @@
     </nav>
 
     <main>
+
         <div class="game-container">
 
+            <div id="container-centered">
+
+                <div id="grid">
+    
+    
+                </div>
+
+            </div>
 
 
         </div>
+
     </main>
 
 
