--- a/index.html
+++ b/index.html
@@ -36,8 +36,23 @@
 
             </div>
 
+            <div class="select-container">
+
+                <label for="difficulty-select" class="label-title">Seleziona difficoltà</label>
+
+                <select name="Difficoltà" id="difficulty-select">
+                    <option value="opt1" id="hard">Difficile</option>
+                    <option value="opt2" id="medium">Media</option>
+                    <option value="opt3" id="easy">Facile</option>
+                </select>
+            </div>
+
             <div>
                 <button id="play-btn">PLAY</button>
+            </div>
+
+            <div id="recharge">
+                <button id="recharge-btn">REFRESH</button>
             </div>
 
         </div>
