--- a/index.html
+++ b/index.html
@@ -41,19 +41,23 @@
                 <label for="difficulty-select" class="label-title">Seleziona difficoltà</label>
 
                 <select name="Difficoltà" id="difficulty-select">
-                    <option value="opt1" id="hard">Difficile</option>
-                    <option value="opt2" id="medium">Media</option>
-                    <option value="opt3" id="easy">Facile</option>
+                    <option value="1" selected>Difficile</option>
+                    <option value="2" >Media</option>
+                    <option value="3" >Facile</option>
                 </select>
             </div>
 
-            <div>
-                <button id="play-btn">PLAY</button>
+            <div class="btns-container">
+                
+                <div>
+                    <button id="play-btn">PLAY</button>
+                </div>
+    
+                <div id="recharge">
+                    <button id="recharge-btn">REFRESH</button>
+                </div>
             </div>
 
-            <div id="recharge">
-                <button id="recharge-btn">REFRESH</button>
-            </div>
 
         </div>
 
