added comments fixed errors

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     <button id="play-btn">PLAY</button>
                 </div>
     
-                <div id="recharge">
-                    <button id="recharge-btn">REFRESH</button>
+                <div id="refresh">
+                    <button id="refresh-btn">REFRESH</button>
                 </div>
             </div>
 
